[package]
name = "bitregions"
version = "0.1.2"
authors = ["Zach Marcantel <zmarcantel@gmail.com>"]
description = "Generate a unit structure to represent a set of bit-regions."
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/zmarcantel/bitregions"
readme = "README.md"
keywords = ["ffi", "bitflags", "embedded", "bits"]

[dependencies]
proc-macro-hack = "^0.5.11"
bitregions-impl = { version = "0.1.2", path = "./impl" }

[workspace]
members = [
    "./impl",
]
