[package]
name = "bitregions-impl"
version = "0.2.2"
authors = ["Zach Marcantel <zmarcantel@gmail.com>"]
description = "implementation for the bitregions crate"
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/zmarcantel/bitregions"
keywords = ["ffi", "bitflags", "embedded", "bits"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.8", features = ["full"] }
quote = "^1.0.2"
proc-macro2 = "^1.0.9"
